--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
                     <meta charset="utf-8" emacsmode="-*- markdown -*">
-                            **Starter Document**
-
-Welcome to Markdeep. It's the simple way to write plain text with
-_style_. From https://casual-effects.com/markdeep.
-
-Section
-===============================================================================
-
-Subsection
--------------------------------------------------------------------------------
 
 
-
-Hello World!
-
+<!-- Beginning -->
 
 
+# YOU'VE ARRIVED AT LISTENING COMPREHENSION RESEARCH PROJECT
+
+!!! Tip
+    Please follow the 3 steps shown below
+
+## Step 1
+
+Please fill out the demographic survey hosted on the [Google Forms](https://docs.google.com/forms/d/e/1FAIpQLSc_suTCdwzXknhSgH6Ey4QNwQm3_FTgu_Stf7zJSZJMQF51SA/viewform?usp=pp_url).
+
+<!-- End -->
 
 
 <!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js" charset="utf-8"></script><script src="https://morgan3d.github.io/markdeep/latest/markdeep.min.js?" charset="utf-8"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
