--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <!-- Beginning -->
 
 
-# YOU'VE ARRIVED AT LISTENING COMPREHENSION RESEARCH PROJECT
+<big>You’ve Arrived at Listening Comprehension Research Project</big>
+
 
 !!! Tip
     Please follow the 3 steps shown below
