--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
 Please fill out the demographic survey hosted on the [Google Forms](https://docs.google.com/forms/d/e/1FAIpQLSc_suTCdwzXknhSgH6Ey4QNwQm3_FTgu_Stf7zJSZJMQF51SA/viewform?usp=pp_url).
 
+## Step 2
+
+!!! WARNING
+    Please DO NOT turn on captions in any language
+
+player:
+     ![Group 1 Video](group_1.mov)
+
+
 <!-- End -->
 
 
