--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ Please fill out the demographic survey hosted on the [Google Forms](https://docs
 !!! WARNING
     Please DO NOT turn on captions in any language
 
-player:
-     ![Group 1 Video](group_1.mov)
+
+![Group 1 - Video](https://player.vimeo.com/video/767505480?h=756b24dba2)
 
 
 <!-- End -->
