--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@ Please fill out the demographic survey hosted on the [Google Forms](https://docs
     Please DO NOT turn on captions in any language
 
 
-![Group 1 - Video](https://player.vimeo.com/video/767505480?h=756b24dba2)
+<!-- ![Group 1 - Video](https://player.vimeo.com/video/767505480) -->
+<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/767505480?h=756b24dba2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="group_1.m4v"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
 
 <!-- End -->
