--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
-                    <meta charset="utf-8" emacsmode="-*- markdown -*">
+<meta charset="utf-8" emacsmode="-*- markdown -*">
 
 
 <!-- Beginning -->
 
+--------
 
 <big>
 **You’ve Arrived at Listening Comprehension Research Project**
 </big>
 
+--------
 
-!!! Tip
-    Please follow the 3 steps shown below
+# Introduction
 
-## Step 1
+Please follow the instructions step by step. You don't fuck up.
+
+<!-- !!! Tip -->
+    <!-- Please follow the 3 steps shown below -->
+
+## Step 1 - Fill The Form
 
 Please fill out the demographic survey hosted on the [Google Forms](https://docs.google.com/forms/d/e/1FAIpQLSc_suTCdwzXknhSgH6Ey4QNwQm3_FTgu_Stf7zJSZJMQF51SA/viewform?usp=pp_url).
 
-## Step 2
+
+## Step 2 - Watch The TED Talk
+
 
 !!! WARNING
     Please DO NOT turn on captions in any language
