--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8" emacsmode="-*- markdown -*">
 
+                ![](Lc.png)
 
 <!-- Beginning -->
 
@@ -11,28 +12,55 @@
 
 --------
 
-# Introduction
 
-Please follow the instructions step by step. You don't fuck up.
+!!! Tip
+    Please follow the 3 steps shown below.
 
-<!-- !!! Tip -->
-    <!-- Please follow the 3 steps shown below -->
+# Step 1 - Demographic Survey
 
-## Step 1 - Fill The Form
-
-Please fill out the demographic survey hosted on the [Google Forms](https://docs.google.com/forms/d/e/1FAIpQLSc_suTCdwzXknhSgH6Ey4QNwQm3_FTgu_Stf7zJSZJMQF51SA/viewform?usp=pp_url).
+Please fill out the demographic survey on [Tencent Form](https://wj.qq.com/s2/11082063/6c75/).
 
 
-## Step 2 - Watch The TED Talk
+# Step 2 - Watch the TED Talk
 
 
 !!! WARNING
-    Please DO NOT turn on captions in any language
+    Please **DO NOT** turn on captions in any language
+
+**Group_1** Please watch the TED Talk video at **0.75x** playback speed
+
+**Group_2** Please watch the TED Talk video at the **normal** speed
+
+**Group_3** Please watch the TED Talk video at **1.25x** playback speed
 
 
-<!-- ![Group 1 - Video](https://player.vimeo.com/video/767505480) -->
-<div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/767505480?h=756b24dba2&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="group_1.m4v"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/767509135?h=7544157298&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="group_2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
 
+
+# Step 3 - Listening Comprehension Quiz
+Please take the listening comprehension quiz on [Tencent Form](https://wj.qq.com/s2/11082070/975e).
+
+<br>
+<br>
+
+--------
+<br>
+
+</medium>
+    <center>
+**ABOUT the Researchers**
+
+    Dr. Nihat Polat & 
+    Dr. Laura Mahalingappa &
+    Jiaxuan (Mikki) Zong
+</medium>
+
+
+</scriptsize>             
+        Teaching and Learning, Policy and Leadership
+
+        University of Maryland, College Park
+</scriptsize>
 
 <!-- End -->
 
