--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<meta charset="utf-8" emacsmode="-*- markdown -*">
+<!-- <!-- <meta charset="utf-8" emacsmode="-*- markdown -*">
 
                 ![](Lc.png)
 
@@ -35,19 +35,13 @@ Please fill out the demographic survey on [Tencent Form](https://wj.qq.com/s2/11
 
 
 <video controls style="width:100%;">
-    <source src="https://hls.ted.com/project_masters/2692/manifest.m3u8?intro_master_id=2346">
+    <source src="https://hls.ted.com/project_masters/2692/manifest.m3u8?intro_master_id=2346" type="video/webm">
 </video>
-
-
-<!-- 
-<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/767509135?h=7544157298&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="group_2"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> -->
 
 
 # Step 3 - Listening Comprehension Quiz
 Please take the listening comprehension quiz on [Tencent Form](https://wj.qq.com/s2/11082070/975e).
 
-
-<!-- <div style="max-width:854px"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe id="myIFrame" src="https://embed.ted.com/talks/lang/eo/john_mcwhorter_4_reasons_to_learn_a_new_language" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowcontrols></iframe></div></div> -->
 
 <br>
 <br>
@@ -71,7 +65,8 @@ Please take the listening comprehension quiz on [Tencent Form](https://wj.qq.com
         University of Maryland, College Park
 </scriptsize>
 
-<!-- End -->
+<!-- End
 
 
 <!-- Markdeep: --><style class="fallback">body{visibility:hidden;white-space:pre;font-family:monospace}</style><script src="markdeep.min.js" charset="utf-8"></script><script src="https://morgan3d.github.io/markdeep/latest/markdeep.min.js?" charset="utf-8"></script><script>window.alreadyProcessedMarkdeep||(document.body.style.visibility="visible")</script>
+<!-- <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script><script src="/api/player.js"></script> -->
